Ajustes Anotations
